--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-image-picker": "^8.1.0",
     "intl": "^1.2.5",
     "react": "~16.9.0",
+    "react-content-loader": "^5.0.4",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
@@ -26,6 +27,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
